--- a/index.html
+++ b/index.html
@@ -1,15 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
-</head>
-<body>
-    
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./css/style.css" />
+        <title>Document</title>
+    </head>
+    <body>
+        <div class="card">
+            <div class="card__img">
+                <img
+                    src="./img/illustration-box-desktop.svg"
+                    alt="box"
+                    class="card__img-cube"
+                />
+                <div class="card__img-top"></div>
+                <div class="card__img-bottom"></div>
+            </div>
+            <div class="card__content">
+                <h1 class="card__title">FAQ</h1>
+                <div class="card__question">
+                    <div class="question__title">
+                        <a href="#" class="card__question-title"
+                            >How many team members can I invite?
+                            <img
+                                src="./img/icon-arrow-down.svg"
+                                alt="arrow"
+                                class="card__question-arrow"
+                        /></a>
+                    </div>
+                    <p class="card__question-text">
+                        You can invite up to 2 additional users on the Free
+                        plan. There is no limit on team members for the Premium
+                        plan.
+                    </p>
+                </div>
+                <div class="card__question">
+                    <div class="question__title">
+                        <a href="#" class="card__question-title"
+                            >What is the maximum file upload size?
+                            <img
+                                src="./img/icon-arrow-down.svg"
+                                alt="arrow"
+                                class="card__question-arrow"
+                        /></a>
+                    </div>
+                    <p class="card__question-text">
+                        No more than 2GB. All files in your account must fit
+                        your allotted storage space.
+                    </p>
+                </div>
+                <div class="card__question">
+                    <div class="question__title">
+                        <a href="#" class="card__question-title"
+                            >How do I reset my password?
+                            <img
+                                src="./img/icon-arrow-down.svg"
+                                alt="arrow"
+                                class="card__question-arrow"
+                        /></a>
+                    </div>
+                    <p class="card__question-text">
+                        Click “Forgot password” from the login page or “Change
+                        password” from your profile page. A reset link will be
+                        emailed to you.
+                    </p>
+                </div>
+                <div class="card__question">
+                    <div class="question__title">
+                        <a href="#" class="card__question-title"
+                            >Can I cancel my subscription?
+                            <img
+                                src="./img/icon-arrow-down.svg"
+                                alt="arrow"
+                                class="card__question-arrow"
+                        /></a>
+                    </div>
+                    <p class="card__question-text">
+                        Yes! Send us a message and we’ll process your request no
+                        questions asked.
+                    </p>
+                </div>
+                <div class="card__question">
+                    <div class="question__title">
+                        <a href="#" class="card__question-title"
+                            >Do you provide additional support?
+                            <img
+                                src="./img/icon-arrow-down.svg"
+                                alt="arrow"
+                                class="card__question-arrow"
+                        /></a>
+                    </div>
+                    <p class="card__question-text">
+                        Chat and email support is available 24/7. Phone lines
+                        are open during normal business hours.
+                    </p>
+                </div>
+            </div>
+        </div>
 
-    <script src="./js/main.js"></script>
-</body>
+        <script src="./js/main.js"></script>
+    </body>
 </html>
