--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
     </head>
     <body>
         <div class="card">
+            <div class="card__img-cube"></div>
             <div class="card__img">
-                <img
-                    src="./img/illustration-box-desktop.svg"
-                    alt="box"
-                    class="card__img-cube"
-                />
                 <div class="card__img-top"></div>
                 <div class="card__img-bottom"></div>
             </div>
